source/lando/src/test/lando/misc/should_fail/name_phrase_punct.lando
system A Name With Punctuation.
An explanation.

requirements R

A referential requirement
When referring to the system named A Name With Punctuation. things go wrong!